# ComfyUI-Dataset-Gates

./: .gitignore  README.md  __init__.py  pyproject.toml
docs/plans/: 2026-06-21-bucket-resize-design.md  2026-06-21-bucket-resize-implementation.md  2026-06-21-folder-image-loader-design.md  2026-06-21-folder-image-loader-implementation.md  2026-06-21-grid-image-pool-design.md  2026-06-21-image-gate-bus-design.md  2026-06-21-image-gate-bus-implementation.md  2026-06-21-image-gate-design.md  2026-06-21-image-gate-implementation.md  2026-06-21-image-pool-grid-implementation.md  2026-06-21-multi-reroute-design.md  2026-06-21-multi-reroute-implementation.md  2026-06-21-pool-profiles-design.md  2026-06-21-pool-profiles-implementation.md  2026-06-21-text-gate-design.md  2026-06-21-text-gate-implementation.md  2026-06-26-textgate-run-from-here-design.md  2026-06-29-sidecar-save-design.md  2026-06-29-textgate-protected-design.md
gates/: bucket_node.py  buckets.py  gate.py  gate_bus.py  gate_server.py  gates_compat.py  handlers.py  image_chooser.py  imaging.py  loader.py  node.py  pool.py  profile_node.py  profiles.py  profiles_routes.py  routes.py  scan.py  sidecar.py  sidecar_node.py  textgate.py
tests/: test_bucket_node.py  test_buckets.py  test_gate.py  test_gate_bus.py  test_image_chooser.py  test_imaging.py  test_loader.py  test_node.py  test_pool.py  test_profile_node.py  test_profiles.py  test_routes_logic.py  test_scan.py  test_sidecar.py  test_sidecar_node.py  test_textgate.py
web/: grid_image_pool.js  image_chooser.js  image_gate.js  pool_profile.js  text_gate.js
